@@ -1,0 +1,6 @@
+# Define the hyprshade filter
+# - blue-light-filter
+# - vibrance 
+# - off
+# get available filters with hyprshade ls
+hyprshade_filter="blue-light-filter"
