@@ -45,6 +45,7 @@ bind = $mainMod, V, exec, ~/dotfiles/scripts/cliphist.sh
 bind = $mainMod CTRL, T, exec, ~/dotfiles/waybar/themeswitcher.sh
 bind = $mainMod CTRL, S, exec, ~/dotfiles/apps/ML4W_Dotfiles_Settings-x86_64.AppImage
 bind = $mainMod CTRL, P, exec, hyprpicker -a
+bind = $mainMod SHIFT, S, exec, ~/dotfiles/hypr/scripts/hyprshade.sh
 
 # Workspaces
 bind = $mainMod, 1, workspace, 1
